fixed delete button align, text adjustment, create glowing sidebar

--- a/css/book_collection.css
+++ b/css/book_collection.css
@@ -1,3 +1,14 @@
+.list-group-item{
+    display: inline-block;
+    width: 96%;
+}
+
+.btn-del{
+    display: inline;
+    margin-left: 0.7%;
+    margin-bottom:0.3%;
+}
+
 .btn-file {
     position: relative;
     overflow: hidden;
