--- a/css/book_reading.css
+++ b/css/book_reading.css
@@ -1,16 +1,24 @@
-.controlsArrow.visible {
-    background-image:url("../img/ArrowR.png");
+#logOut{
+    margin: 3px 0px 0px 10px;
 }
 
-.controlsArrow {   
-    background-image:url("../img/ArrowL.png");
-    right: 88px;
-    top: 65px;
+.sidebar.control-visible {
+    top: 97px;
+}
+
+.sidebar.glowing {
+    background-color: #E1E7ED;  
+}
+
+
+.sidebar { 
+    right: 0px;
+    top: 0px;
     position: fixed;
     z-index: 999;
 
-     width:11px;
-     height:11px;
+    width:105px;
+    height:100%;
 
 }
 
@@ -18,6 +26,7 @@
 	right: 5px;
 	position: fixed;
     z-index: 999;
+    background-color: white;
 }
 
 .b-reading {
@@ -27,7 +36,7 @@
 
 body {
     margin: 0;
-    padding: 0;
+    padding: 0% 2%;
     background-color: white;
     color: gray;
     font-family: Helvetica;
